[package]
name = "rust_web_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.10"
secp256k1 = "0.20.2"
hex = "0.4"

actix = "0.13"
actix-broker = "0.4"
actix-codec = "0.5"
actix-cors = "0.6"
actix-files = "0.6"
actix-http = "3.4"
actix-identity = "0.6"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
actix-protobuf = "0.10"
actix-session = { version="0.8", features = ["cookie-session"] }
actix-test = "0.1"
actix-tls = "3.1.1"
actix-utils = "3"
actix-web = "4.4"
actix-web-actors = "4.1"
actix-web-lab = "0.20"
actix-ws = "0.2.5"
awc = "3.2"
async-stream = "0.3"

chrono = { version = "0.4.20", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.7"
dotenvy = "0.15"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
openssl = { version = "0.10.55", features = ["v110"] }
rand = "0.8"
rustls = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24.2", features = ["sync", "io-util"] }
tokio-util = "0.7.4"
tokio-stream = "0.1.1"